@@ -47,6 +47,7 @@ next version - not released yet
   but it could produce blinking in some cases
 ! ISR: Crop PGS and DVB subtitles if they don't fit into video frame
 ! ISR/VSFilter: Use correct colorimetry information for PGS and DVB subtitles
+! ISR: Subtitles could be partially rendered when using no subtitle queue
 ! Ticket #2588, Subtitle renderer: The subtitle's shadow was not drawn when the subtitle's border was very thin
 ! Ticket #2773, Subtitle renderer: Fix possible artifacts when using karaoke effects
 ! Ticket #2994, Fix toolbar separators not being properly painted
